<resources>
    <string name="app_name">E-Commerce Android App</string>
    <string name="e_commerce">E-Commerce</string>
    <string name="version">version</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recent">Recent</string>
    <string name="category">Category</string>
    <string name="help">Help</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="cart">Cart</string>
    <string name="recent_fragment">Recent Fragment</string>
    <string name="_100_usd">100 USD</string>
    <string name="category_fragment">Category Fragment</string>
    <string name="help_fragment">Help Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="product_name">product name</string>
    <string name="product_image">product image</string>
    <string name="product_price">899 USD</string>
    <string name="product_quantity">5 item(s)</string>
    <string name="product_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut leo at velit efficitur pharetra. Donec eget convallis purus. Donec sed elit pharetra, condimentum elit in, tincidunt ante. Praesent vehicula sodales purus non pellentesque. In tincidunt rutrum tellus et porttitor. Vivamus velit eros, dignissim ut porttitor ut, tristique eu purus. Curabitur dignissim tincidunt metus. Nulla rhoncus nibh non enim rutrum faucibus. Maecenas lectus dolor, elementum nec neque consectetur, tempor feugiat ex. Pellentesque eget varius orci. Nunc tempor, sem in pretium accumsan, nisi metus varius justo, vel egestas mi neque id arcu. Ut ut rutrum lorem, in interdum odio.</string>
    <string name="category_image">Category image</string>
    <string name="category_name">category name</string>
    <string name="category_items_number">item(s)</string>
    <string name="help_text">help text</string>
    <string name="user_name_string">Solodroid</string>
    <string name="mail">help.solodroid@gmail.com</string>
    <string name="mobile">+628 12345689</string>
    <string name="address">Envato HQ : 12 King Street, melbourne Victoria 300 Australia</string>
    <string name="edit">EDIT</string>
    <string name="profil_help_image">profil help image</string>
    <string name="order_history">Order History</string>
</resources>