<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/category_image"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:contentDescription="@string/category_image"
        android:padding="10dp"
        android:scaleType="fitXY"
        android:src="@drawable/a1" />

    <TextView
        android:id="@+id/category_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/category_image"
        android:layout_toRightOf="@id/category_image"
        android:text="@string/category_name"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/category_items_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/category_name"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@id/category_image"
        android:layout_toRightOf="@id/category_image"
        android:text="@string/category_items_number"
        android:textSize="15sp" />


</RelativeLayout>