<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductDetail">


    <ImageView
        android:id="@+id/product_image"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:contentDescription="@string/product_image"
        android:scaleType="fitXY"
        android:src="@drawable/p1" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool_bar_detail"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/transparent"
        android:theme="@style/Toolbar.TitleText" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/add_to_cart"
        android:layout_marginStart="10sp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="10sp"
        android:background="@color/white"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/core_sans_e_regular"
            android:text="@string/product_name"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/product_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/product_name"
            android:layout_marginStart="35dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="5dp"
            android:drawablePadding="10dp"
            android:fontFamily="@font/core_sans_e_regular"
            android:text="@string/product_price"
            android:textColor="@color/green"
            android:textSize="18sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_price"
            app:drawableTint="@color/green" />

        <TextView
            android:id="@+id/product_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/product_name"
            android:layout_marginStart="35dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="5dp"
            android:layout_toEndOf="@id/product_price"
            android:layout_toRightOf="@id/product_price"
            android:drawablePadding="10dp"
            android:fontFamily="@font/core_sans_e_regular"
            android:text="@string/product_quantity"
            android:textColor="@color/gray"
            android:textSize="18sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_quantity"
            app:drawableTint="@color/gray" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/product_price"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/product_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/core_sans_e_regular"
                android:text="@string/product_description"
                android:textColor="@color/gray"
                android:textSize="15sp" />
        </ScrollView>

    </RelativeLayout>

    <Button
        android:id="@+id/add_to_cart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-5dp"
        android:fontFamily="@font/core_sans_e_regular"
        android:text="@string/add_to_cart"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>